# fifalog

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  fly.toml  package.json  run-dev.sh  tsconfig.json  webpack.config.js
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml
backend/: Cargo.toml  api.ts  config.ts  db-utils.ts  db.ts  main.ts  package.json  run-dev.sh  teams.ts  tsconfig.json
backend/migrations/: 0001_initial.sql  0004_exclude_from_randomize_all.sql  20190924114554-init.js
backend/migrations/sqls/: 20190924114554-init-up.sql
backend/src/: api.ts  api_routes.rs  api_types.rs  auth.rs  auth.ts  config.rs  config.ts  db-utils.ts  db.rs  db.ts  domain.rs  env.rs  indexPage.ts  main.rs  main.ts  migrate.ts  otel.rs  page.rs  randomize.rs  result.rs  style.rs  teams.rs  teams.ts  utils.rs  utils.ts
backend/src/components/: latest_matches.rs  match_actions.rs  mod.rs  page.rs  stats.rs
backend/src/index/: mod.rs
backend/src/matches/: latest_matches.rs  match_actions.rs  match_stats.rs  routes.rs
backend/src/routes/: api.ts  auth.ts  create_match_pair.rs  index.rs  indexPage.ts  match_.rs  match_list.rs  mod.rs  stats.rs  teams.rs
backend/src/sql/: createMatch.sql  createMatch.ts  create_match.rs  create_team.rs  deleteMatch.sql  deleteMatch.ts  delete_match.rs  delete_team.rs  finishMatch.sql  finishMatch.ts  finish_match.rs  finished_match_count.rs  index.ts  latestMatches.sql  latestMatches.ts  latest_matches.rs  leagues.rs  leagues.sql  leagues.ts  match.sql  match.ts  match_.rs  match_count.rs  match_team_stats.rs  matches.rs  mod.rs  sql_types.rs  teamStats.sql  teamStats.ts  totalStats.sql  totalStats.ts  total_stats.rs  update_league.rs  update_team.rs  userStats.sql  userStats.ts  user_stats.rs  users.rs  users.sql  users.ts
backend/src/stats/: mod.rs  routes.rs
backend/templates/: base.html  index.html
backend/templates/components/: create_match_pair.html  match_list.html  menu.html  stats.html
common/: codecs.ts  package.json  types.ts
frontend/: .eslintrc.json  .proxyrc.json  api.ts  constants.ts  index.tsx  mutations.ts  package.json  state.ts  teams.ts  tsconfig.json  types.ts  utils.ts  webpack.config.js
frontend/components/: App.scss  App.tsx  CreateRandomMatchPair.tsx  EditMatch.tsx  FinishedMatch.tsx  FutureMatch.tsx  Match.scss  Match.tsx  MatchList.scss  MatchList.tsx  MatchRow.scss  MatchRow.tsx  MatchRowButtons.tsx  RandomMatch.scss  RandomMatch.tsx  RandomizeButton.tsx  SelectedTeams.scss  SelectedTeams.tsx  Stats.tsx  UserSelect.tsx
frontend/src/: api.ts  atom-utils.ts  component-utils.tsx  data.ts  effect.ts  forked-effect.ts  index.html  index.tsx  lenses.ts  mutations.ts  remotedata.ts  scoped-effect.ts  state.ts  state.tsx  status.ts  store.ts  utils.ts
frontend/src/auth/: authApi.ts  authSlice.ts
frontend/src/components/: App.tsx  CreateRandomMatchPair.tsx  EditMatch.module.css  EditMatch.module.scss  EditMatch.scss  EditMatch.tsx  Index.tsx  Input.scss  Input.tsx  Layout.module.css  Layout.tsx  LoginForm.module.css  LoginForm.scss  LoginForm.tsx  Logout.module.scss  Logout.tsx  Main.tsx  MatchList.module.css  MatchList.tsx  MatchRow.module.css  MatchRow.tsx  MatchRowButtons.module.css  MatchRowButtons.scss  MatchRowButtons.tsx  Pagination.tsx  RandomizeButton.tsx  Select.tsx  Stats.module.css  Stats.scss  Stats.tsx  Teams.module.css  Teams.tsx  TextButton.module.css  TextButton.tsx  UserSelect.tsx  whitespace.tsx
frontend/src/stats/: statsApi.ts
migrations/: 0002_team_add_disabled.sql  0003__match_league_id_null.sql  config.ts  migrate.ts  package.json  tsconfig.json
src/: auth.rs  db.rs  env.rs  main.rs  teams.rs  utils.rs
src/index/: mod.rs  routes.rs
src/matches/: latest_matches.rs  match_actions.rs  match_stats.rs  mod.rs  randomize.rs
src/sql/: finish_match.rs  leagues.rs  match_count.rs  match_team_stats.rs  matches.rs  mod.rs  sql_types.rs  total_stats.rs  update_league.rs  update_team.rs
src/stats/: routes.rs
static/: index.html
(+7 files in other folders)
