[package]
name = "fifalog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["form"] }
cookie = "0.18"
derive_more = { version = "1.0", features = ["display"] }
maud = { version = "0.26", features = ["axum"] }
envy = "0.4"
eyre = "0.6"
itertools = "0.13"
lightningcss = "1.0.0-alpha.58"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-cookies = { version = "0.10", features = ["signed"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
