[package]
name = "fifalog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["form"] }
cookie = "0.18"
derive_more = { version = "2.0", features = ["display"] }
maud = { version = "0.27", features = ["axum"] }
envy = "0.4"
eyre = "0.6"
itertools = "0.14"
lightningcss = "1.0.0-alpha.67"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-cookies = { version = "0.11", features = ["signed"] }
