[package]
name = "fifalog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
axum = "0.7"
cookie = "0.18"
envy = "0.4.2"
futures-util = "0.3.28"
rand = "0.8.5"
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
time = { version = "0.3.22", features = ["formatting"] }
tokio = { version = "1.29.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = { version = "0.10", features = ["signed"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
