[package]
name = "fifalog"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
askama_axum = "0.4"
async-trait = "0.1"
axum = "0.7"
cookie = "0.18"
derive_more = "0.99"
envy = "0.4"
eyre = "0.6"
itertools = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
tokio = { version = "1.29", features = ["full"] }
tower = "0.4"
tower-cookies = { version = "0.10", features = ["signed"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
